# agent-tool-templates

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  AUTHORS  CONTRIBUTING.md  README.md  RELEASE.yaml  pyproject.toml
.github/workflows/: checks.yaml
scripts/custom_model_creator/: README.md  create_custom_model.py  requirements.txt
tools/custom_models/: README.md
tools/custom_models/upload_file_to_ai_catalog/: README.md
tools/custom_models/upload_file_to_ai_catalog/custom_model/: custom.py  env.py  file_storage_backend_generic.py  model-metadata.yaml  tool.py
tools/custom_models/upload_file_to_data_registry/: README.md
tools/custom_models/upload_file_to_data_registry/custom_model/: custom.py  file_storage_backend.py  file_storage_backend_s3.py  model-metadata.yaml  requirements.txt  tool.py
tools/global/: README.md
tools/global/get_ai_catalog_dataset/: README.md
tools/global/get_ai_catalog_dataset/custom_model/: custom.py  model-metadata.yaml  requirements.txt  tool.py
tools/global/get_data_registry_dataset/: README.md
tools/global/get_data_registry_dataset/custom_model/: custom.py  model-metadata.yaml  requirements.txt  tool.py
tools/global/make_ml_predictions/: README.md
tools/global/make_textgen_predictions/: README.md
tools/global/make_time_series_predictions/: README.md
tools/global/render_chart_plotly/: README.md
tools/global/render_chart_vegalite/: README.md
tools/global/search_ai_catalog/: README.md
tools/global/search_data_registry/: README.md
tools/global/summarize_dataframe/: README.md
(+40 files in other folders)
