[project]
name = "agent-tool-templates"
version = "0.1.0"
description = "A collection of tools that can be used to build agents in DataRobot."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datarobot>=3.6.0"
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=3.3.0"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # Pyflakes
    "F",  # pycodestyle
    "I",  # isort
    "N",  # pep8-naming
    "PL", # pylint
    "UP", # pyupgrade
    "INP", # check missing __init__.py
    "B006", # mutable-argument-default
]

extend-ignore = [
    # D100-D106: Ignore undocumented module, class, method, function & inner class
    "D100", "D101", "D102", "D103", "D104", "D105", "D106",
    # 1 blank line required between summary line and description
    "D205",
    # Too many arguments
    "PLR0913",
    # Too many statements
    "PLR0915",
    # Too many branches
    "PLR0912",
]
fixable = [
    "I",  # isort
    "D",  # pydocstyle
    "UP",  # pyupgrade
    "F401", # Imported but unused
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # Missing docstring in public package
    "F401"  # Imported but unused
]
[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "bytes"]
max-args = 8
